--- a/package.json
+++ b/package.json
@@ -30,5 +30,14 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@theatre/core": "^0.7.0",
+		"@theatre/studio": "^0.7.0",
+		"@threlte/core": "^6.0.10",
+		"@threlte/extras": "^7.0.0",
+		"@threlte/theatre": "^2.1.3",
+		"@types/three": "^0.156.0",
+		"three": "^0.157.0"
+	}
 }
